# jamtoysynth

./: CMakeLists.txt
src/: CMakeLists.txt  audio_output.h  instrument.c  instrument.h  keys.cpp  keys.h  main.cpp  pots.cpp  pots.h  screen.cpp  screen.h  simulator.c  simulator.cpp  simulator.h  synth.c  synth.h  synthmain.c  text.c  text.h  touchlistener.cpp  touchlistener.h
